Bug 88786 - array formula gives wrong result
Summary: array formula gives wrong result
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: highest critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.5.0 target:4.4.1
Keywords: regression
Depends on:
Blocks: Array-Formula mab4.4
  Show dependency treegraph
 
Reported: 2015-01-25 09:57 UTC by water.qian
Modified: 2026-02-19 08:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
file to show the array formula error (7.95 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-01-25 09:57 UTC, water.qian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description water.qian 2015-01-25 09:57:51 UTC
Created attachment 112786 [details]
file to show the array formula error

Problem description: 

Steps to reproduce:
1. Input 1 in A1, 2 in A2, 3 in A3.
2. Input array formula 10-A1:A3 in B1:B3
3. Result is wrong.

Current behavior:
   Opencalc shows -9,-8,-7 in B1,B2,B3

Expected behavior:
   Opencalc shows 9,8,7 in B1,B2,B3
Comment 1 m_a_riosv 2015-01-25 13:08:57 UTC
Hi @water.gian, thanks for reporting.

Reproducible.
Win7x64
Version: 4.4.0.3 Build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7
Version: 4.4.1.0.0+ Build ID: cd2434655c94814598daa8105cab0af314a6adf7
  TinderBox: Win-x86@42, Branch:libreoffice-4-4, Time: 2015-01-23_02:40:36
Version: 4.5.0.0.alpha0+Build ID: e3c0025461bdf55e62a308a76c3aa0a35109f076
  TinderBox: Win-x86@39, Branch:master, Time: 2015-01-24_02:19:31


Last working for me:
Version: 4.3.7.0.0+ Build ID: db4be3fee9369d8a0bb2df07c25564f19eb564ed
TinderBox: Win-x86@51-TDF, Branch:libreoffice-4-3, Time: 2015-01-23_21:42:55


With the array first works fine.
{=-A1:A3+10}

Really a dangerous issue.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2015-01-27 10:23:24 UTC
I'm taking care of this.
Comment 4 Commit Notification 2015-01-27 14:34:56 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b435ca9e6f826704314f8a437c352aa799767bd4

Resolves: tdf#88786 correct matrix sub operation

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 gipsonp@gmail.com 2015-02-04 09:32:56 UTC
Can I just put in a plea for a fix before 4.5.0. Array formulae producing the negative of the true result is a major issue and will easily go unnoticed since most users BELIEVE THEIR SPREADSHEET.

When and if users discover this, since a lot of them will be using these functions for financial calculations, it is quite dangerous to let them continue without warning.

Cheers

Paul
Comment 6 Eike Rathke (retired, only occasionally showing up) 2015-02-04 13:25:55 UTC
Fix will be in 4.4.1 with https://gerrit.libreoffice.org/gitweb?p=core.git;a=commit;h=e4de059c53dc2cc6547e7af55789aee4ec214c60 just that the commit notification didn't add it to this bug here.
Comment 7 gipsonp@gmail.com 2015-02-05 10:08:16 UTC
(In reply to Eike Rathke from comment #6)
> Fix will be in 4.4.1 with
> https://gerrit.libreoffice.org/gitweb?p=core.git;a=commit;
> h=e4de059c53dc2cc6547e7af55789aee4ec214c60 just that the commit notification
> didn't add it to this bug here.

Thanks. I won't modify all my spreadsheets then :)
Comment 8 andis.lazdins 2015-02-07 22:20:21 UTC
Really terrible issue as it affect only few array formulas. I found it in spreadsheet with several thousands of array formulas and only 1 formula was affected, at least I didn't found other errors.