Resolves: tdf#88786 correct matrix sub operation

Change-Id: Ib5ce2ffe17cc34e0b3f04ebc06ea392707b7b9e6